--- a/.github/workflows/notebook.yml
+++ b/.github/workflows/notebook.yml
@@ -43,6 +43,10 @@ jobs:
         path: _build/.jupyter_cache
         key: jupyter-book-cache-${{ hashFiles('requirements.txt') }}
 
+    - name: Build table of contents
+      run: |
+        jupyter-book toc from-project .
+
     # Build the book
     - name: Build the book
       run: |
