--- a/.github/workflows/notebook.yml
+++ b/.github/workflows/notebook.yml
@@ -46,8 +46,8 @@ jobs:
     # Build the book
     - name: Build the book
       run: |
-        jupyter-book toc from-project .
-        jupyter-book build .
+        jupyter-book toc from-project ./notebooks
+        jupyter-book build ./notebooks
 
     # Upload the book's HTML as an artifact
     - name: Upload artifact
